# LoongEnv-SHIZE

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-package.yml
Figs/: 封装发布工作流.md
docs/: ALGORITHM.md  planning_demo_summary.json
fixed_toppra_mvc_ruckig/: README.md  __init__.py  cli.py  core.py  example_usage.py  pipeline.py  pyproject.toml  requirements.txt
models/HSR-JR650-2/: HSR-JR650-2.urdf  link_2.STL  link_4.STL
models/IRB-R10/: IRB-R10.urdf  IRB-R10.xml  base_link.STL  gazebo.launch  link_3.STL
models/MP600/: mp600_sne_v30.urdf.xml
models/T12A/: T12A-14.xml  gazebo.launch  link_1.STL  link_3.STL  link_4.STL
models/kuka-kr3/: KR3R400_Z150_2_ROS.urdf  KR3R400_Z150_2_ROS.xml  base_link.stl  link_1.stl  untitled.m
models/kuka-kr3/kuka_kr3_R400Z150_2/: scaraRobotControl.p
models/kuka-kr6/: KR6R900_2_ROS.urdf  KR6R900_2_ROS.xml  link_1.STL  link_2.STL
models/kuka-kr6/kuka_kr6_R900_2/: kukaRobotControl.p
public/robots/HSR-JR650-2/: HSR-JR650-2.xml  base_link.STL  link_1.STL  link_3.STL  link_5.STL  link_6.STL
public/robots/IRB-R10/: display.launch  link_1.STL  link_2.STL  link_4.STL  link_5.STL  link_6.STL
public/robots/T12A/: T12A-14.urdf  display.launch  (+3 more)
public/samples/: er15_waypoints_sample.csv
scripts/: generate_planning_docs_artifacts.py  planning_bridge.py
server/: api.mjs  dev-stack.mjs
src/: App.tsx  types.ts
src/components/: CollapsibleSection.tsx  SimulationView.tsx
src/data/: robotCatalog.ts
src/plugins/: DefinePlugin.tsx  DesignPlugin.tsx  DiagnosePlugin.tsx
(+8 files in other folders)
